Add support for event tags in opc-ua protocol.
Signed-off-by: Łukasz Dywicki <luke@code-house.org>